# stakgraph

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.skill  Dockerfile.standalone  README.md  build.sh  docker-compose.yaml  ecosystem.config.js  package-lock.json  push-lsp.sh  push-skill.sh  push-standalone.sh
.claude/: settings.local.json
ast/: .gitignore  Cargo.toml  docker-compose.yaml  readme.md
ast/examples/: cabal.rs  file.rs  files.rs  minimal.rs  next.rs  promt.md  python.rs  ruby.rs  stak.rs  tribes.rs  tribes_front.rs  url.rs
ast/examples/files/: profiles.ts  routes.rb
ast/examples/files/controllers/: intro_requests_controller.rb  investor_companies_controller.rb  profiles_controller.rb
ast/examples/files/db/: schema.rb
ast/examples/minimal/: Main.tsx  blah.go  blah_init.go  main.go  main.py  utils.ts
ast/examples/minimal/ruby/: Gemfile
ast/examples/minimal/ruby/app/controllers/: sessions_controller.rb
ast/examples/minimal/ruby/config/: routes.rb
ast/src/: builder.rs  error.rs  gat.rs  index.rs  lib.rs  print_queries.rs  repo.rs  urls.rs  utils.rs
ast/src/builder/: core.rs  mod.rs  progress.rs  streaming.rs  utils.rs
ast/src/lang/: asg.rs  call_finder.rs  embedding.rs  graph.rs  graph_trait.rs  linker.rs  mod.rs  parse.rs
ast/src/lang/graphs/: array_graph.rs  btreemap_graph.rs  graph.rs  graph_ops.rs  mod.rs  neo4j_graph.rs  neo4j_utils.rs  utils.rs
ast/src/lang/parse/: collect.rs  format.rs  mod.rs  utils.rs
ast/src/lang/queries/: angular.rs  bash.rs  consts.rs  cpp.rs  erb.rs  go.rs  java.rs  kotlin.rs  mod.rs  python.rs  rails_routes.rs  react.rs  react_ts.rs  ruby.rs  rust.rs  svelte.rs  swift.rs  toml.rs  typescript.rs
ast/src/testing/: graphs.rs  mod.rs  neo4j_graph.rs  rust_test.rs  test_backend.rs  test_frontend.rs  utils.rs
ast/src/testing/angular/: .gitignore  angular.json  mod.rs  package.json
ast/src/testing/angular/src/app/: app.component.html  app.routes.ts  people.service.ts
ast/src/testing/c_plus_plus/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  routes.cpp  server
ast/src/testing/cpp/: CMakeLists.txt  main.cpp  mod.rs  model.cpp  model.h  routes.cpp  routes.h
ast/src/testing/flask/: db.py  main.py  mod.rs  model.py  requirements.txt
ast/src/testing/go/: db.go  go.mod  go.sum  main.go  mod.rs  routes.go
ast/src/testing/graphs/: compare_graphs.rs  demorepo_test.rs  go.rs  graph_updates.rs  mod.rs
ast/src/testing/java/: mod.rs  pom.xml
ast/src/testing/kotlin/: README.md  build.gradle.kts  mod.rs  settings.gradle.kts
ast/src/testing/kotlin/app/: build.gradle.kts
ast/src/testing/kotlin/gradle/: libs.versions.toml
ast/src/testing/kotlin/gradle/wrapper/: gradle-wrapper.properties
ast/src/testing/neo4j/: graph.rs  mod.rs  revs.rs
ast/src/testing/nextjs/: .gitignore  mod.rs  package.json
ast/src/testing/nextjs/app/: page.tsx
ast/src/testing/nextjs/app/docs/: page.mdx
ast/src/testing/nextjs/app/items/: page.tsx
ast/src/testing/nextjs/app/person/: page.tsx
ast/src/testing/nextjs/app/test/: alias.vitest.test.ts  component.spec.tsx  e2e.cy.test.ts  e2e.playwright.each.test.ts  e2e.test.ts  integration.api.spec.ts  integration.test.ts  mixed.nested.test.ts  param.each.test.ts  puppeteer.flow.test.ts  unit.component.test.tsx  unit.test.ts
ast/src/testing/nextjs/lib/: utils.ts
ast/src/testing/nodejs/: package.json
ast/src/testing/nodejs/src/: routes.ts  service.ts
ast/src/testing/python/: __init__.py  database.py  db.py  main.py  manage.py  mod.rs  model.py  requirements.txt  routes.py  setup.py  test.db
ast/src/testing/python/django_app/: settings.py  urls.py  views.py  wsgi.py
ast/src/testing/python/fastapi_app/: routes.py
ast/src/testing/python/flask_app/: routes.py
ast/src/testing/react/: mod.rs  package.json
ast/src/testing/react/public/: index.html
ast/src/testing/react/src/: App.css  App.tsx  ComponentPatterns.tsx  api.ts
ast/src/testing/react_ts/: App.css  App.tsx  index.tsx  mod.rs  package.json  server.ts  tsconfig.json
ast/src/testing/react_ts/components/: NewPerson.tsx  People.tsx  Person.tsx
ast/src/testing/ruby/: Gemfile  mod.rs
ast/src/testing/ruby/config/: application.rb  routes.rb
ast/src/testing/ruby/db/: schema.rb
ast/src/testing/rust/: Cargo.toml
ast/src/testing/rust/src/: db.rs  main.rs  model.rs  routes.rs  traits.rs
ast/src/testing/svelte/: .gitignore  mod.rs  package.json  svelte.config.js
ast/src/testing/svelte/src/: App.svelte  Log.svelte
ast/src/testing/swift/: Podfile  mod.rs  mod0.rs
ast/src/testing/swift/SphinxTestApp/: API.swift  AppDelegate.swift  PersonTableViewCell.swift  SceneDelegate.swift  ViewController.swift
ast/src/testing/swift/SphinxTestApp.xcodeproj/: project.pbxproj
ast/src/testing/swift/SphinxTestApp.xcworkspace/: contents.xcworkspacedata
ast/src/testing/typescript/: mod.rs  tsconfig.json
ast/src/testing/typescript/prisma/: schema.prisma
ast/src/testing/typescript/src/: config.ts  controller.ts  index.ts  model.ts  routes.ts  service.ts
lsp/: Cargo.toml  Dockerfile  readme.md
lsp/src/: client.rs  git.rs  language.rs  lib.rs  utils.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs
shared/src/codecov/: mod.rs  utils.rs
shared/src/codecov/coverage/: coverage_tools.rs  execution.rs  mod.rs  package_managers.rs  test_runners.rs  typescript.rs
skill/: Cargo.toml  deps.md
skill/src/: main.rs
stackgraph/: .gitignore  Cargo.toml  cypher.md  deps.md
standalone/: Cargo.toml  docker-compose.yaml
standalone/src/: auth.rs  codecov.rs  handlers.rs  lib.rs  main.rs  types.rs  utils.rs  webhook.rs
standalone/src/codecov/: mod.rs  utils.rs
standalone/src/codecov/coverage/: coverage_tools.rs  execution.rs  mod.rs  package_managers.rs  test_runners.rs  typescript.rs
standalone/static/: app.js  index.html  styles.css  utils.js
standalone/tests/: codecov.rs  fulltest.rs  graph_accuracy.rs  graph_consistency.rs  graph_streaming_consistency.rs  graph_updates.rs  local_e2e.sh
standalone/tests/maps/: actual-map-response-two.html  actual-map-response.html  actual-repo-map-response.html
(+321 files in other folders)
