[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
lsp-types = "0.95.0"
async-lsp = { version = "0.2.1", features = ["tracing"] }
tracing = { version = "0.1.37" }
tracing-subscriber = "0.3.16"
async-process = "2"
tower = "0.5"
tokio = { version = "1.27.0", features = ["full"] }
futures-util = "0.3.31"
anyhow = "1.0.44"
serde = { version = "1", features = ["derive"] }
flate2 = "1.0.35"
tar = "0.4.43"
