[package]
name = "stakgraph-skill"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
ast = { path = "../ast" }
lsp = { path = "../lsp" }

aws-config = "1.5.8"
aws-sdk-s3 = { version = "1.38.0", features = ["http-1x"] }
anyhow = "1"
serde = "1.0.210"
serde_json = "1.0.129"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
reqwest = { version = "0.12.12", features = ["json"] }
