[package]
name = "standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = "1.0.210"
serde_json = "1.0.129"
tokio = { version = "1", features = ["macros"] }
ast = { path = "../ast" , features = []}
lsp = { path = "../lsp" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
futures = "0.3.31"
test-log = "0.*"

[features]
neo4j = ["ast/neo4j"]
