[package]
name = "standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared", features = ["codecov"] }
ast = { path = "../ast" , features = []}
lsp = { path = "../lsp" }

serde = "1.0.210"
serde_json = "1.0.129"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["fs", "cors", "timeout", "trace"] }
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
futures = "0.3.31"
test-log = "0.*"
base64 = "0.21"
uuid = "1.17.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2.5"
hmac = "0.12"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[features]
neo4j = ["ast/neo4j"]
fulltest = ["ast/fulltest"]
codecov = []
