[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.97"
axum = "0.6.20" 
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }
tokio = { version = "1.44.1", features = ["full"] }
hyper = "0.14.27" 